--- a/index.html
+++ b/index.html
@@ -63,14 +63,20 @@
 					<table class="table">
 						<thead>
 							<tr>
-								<th>客户号</th>
+								<th>客户号(默认从大到小)</th>
 								<th>客户简称</th>
 								<th>客户名称</th>
 								<th></th>
 							</tr>
 						</thead>
 						<tbody>
-							<tr>
+							<!--<tr>
+								<td>000000</td>
+								<td>天信信息流量演示</td>
+								<td>天机流量计演示</td>
+								<td></td>
+							</tr>-->
+							<!--<tr>
 								<td>000000</td>
 								<td>天信信息流量演示</td>
 								<td>天机流量计演示</td>
@@ -123,14 +129,16 @@
 								<td>天信信息流量演示</td>
 								<td>天机流量计演示</td>
 								<td></td>
-							</tr>
-							<tr>
-								<td>000000</td>
-								<td>天信信息流量演示</td>
-								<td>天机流量计演示</td>
-								<td></td>
-							</tr>
+							</tr>-->
+							
 						</tbody>
+						<!--<tfoot>
+							<tr>
+								<td><button><img src="img/实心箭头左.png"/></button></td>
+								<td>1</td>
+								<td><button><img src="img/实心箭头-向右.png"/></button></td>
+							</tr>
+						</tfoot>-->
 					</table>
 				</div>
 				
