--- a/table_of_strings.html
+++ b/table_of_strings.html
@@ -288,6 +288,7 @@
 		<script src="js/jquery-1.12.3.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/index.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/td.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 </html>
 
