--- a/02.html
+++ b/02.html
@@ -1,8 +1,27 @@
-$(function() {  
+<html xmlns="http://www.w3.org/1999/xhtml">  
+<head>  
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />  
+    <title>jQuery 版“元素拖拽改变大小”原型 </title>  
+  
+    <script src="js/jquery-1.12.3.min.js" type="text/javascript" charset="utf-8"></script>
+  
+    <script type="text/javascript">  
+  
+        /*   
+  
+        * jQuery.Resize by wuxinxi007   
+  
+        * Date: 2011-5-14   
+  
+        * blog : http://wuxinxi007.cnblogs.com/   
+  
+        */  
+  
+        $(function() {  
   
             //绑定需要拖拽改变大小的元素对象   
   
-            bindResize(document.getElementById('big_table'));  
+            bindResize(document.getElementById('test'));  
   
         });  
   
@@ -107,3 +126,29 @@ $(function() {
             }  
   
         }   
+  
+    </script>  
+  
+    <style type="text/css">  
+        #test  
+        {  
+            position: relative;  
+            top: 0;  
+            left: 0;  
+            width: 400px;  
+            height: 300px;  
+            background: #f1f1f1;  
+            text-align: center;  
+            line-height: 100px;  
+            border: 1px solid #CCC;  
+            cursor: se-resize;  
+        }  
+    </style>  
+</head>  
+<body>  
+    <div id="test">  
+      	  这是内容
+    </div>  
+    <p>dfsafedfdf</p>
+</body>  
+</html>  
